# tobio

./: .gitignore  LICENSE  README.md  progress.md  pyproject.toml  requirements.txt
.cache/41/: cache.db
old/: _sql.py  db2.py  db3.py  old3  orm.py  orm2.py  orm_old.py  schema.sql
old/old1/: distill.py  lmkd  test.html
old/old1/llm/: client.py  server.py
old/old2/: .gitignore  README.md  default.md  main.py  schema.sql  supervisor.md  system.db
old/old2/orin/: __init__.py  agent.py  config.py  connector_old.py  db.py  system.py  tool.py  typing.py  util.py
old/old2/orin/connector/: __init__.py  base.py  openai.py
old/old4/: __init__.py  agent.py  db.py  db.pyi  kernel.py  root-README.md  util.py
old/old4/provider/: __init__.py
old/old5/: README.md  app.py  gateway.py  kernel.py  memory.py  util.py
old/old5/provider/: README.md  base.py  openai.py
old/old6/: app.py  main.py  memory.py  orm.py
old/tobio/: agent.py  orm.py
old/tobio/provider/: __init__.py
src/: app.py  chatgpt.py  orin-chat  orin.py  schema.sql  util.py  ws.py
src/orin/: __init__.py  base.py  db.py  llm.py  main.py  memory.py  orm.py  tool.py  util.py  ws.py
src/orin/db/: README.md  __init__.py  base.py  schema.sql  sqlite.py
src/orin/llm/: README.md  __init__.py  base.py  ollama.py  openai.py
